@@ -1,3 +1,4 @@
+Version 18 	 2010-08-09 	 Added Google Analytics support 
 Version 17 	 2010-08-09 	 Changing landing page to profile edit page 
 Version 16 	 2010-08-09 	 Chaning PhoneNumber from Int to String 
 Version 15 	 2010-08-09 	 Daemonize fcgi 
